# competitive-programming

.cargo/workspace/: Cargo.toml
templates/: template.rs
websites/aoc/: lib_template.rs
websites/aoc/2023/day_01/: Cargo.toml
websites/aoc/2023/day_01/part_01/: Cargo.toml
websites/aoc/2023/day_01/part_02/: Cargo.toml
websites/aoc/2023/day_01/src/: lib.rs
websites/aoc/2023/day_02/: Cargo.toml
websites/aoc/2023/day_02/part_01/: Cargo.toml
websites/aoc/2023/day_02/part_02/: Cargo.toml
websites/aoc/2023/day_02/src/: lib.rs
websites/aoc/2023/day_03/: Cargo.toml
websites/aoc/2023/day_03/src/: lib.rs
websites/aoc/2023/day_04/: Cargo.toml
websites/aoc/2023/day_04/src/: lib.rs
websites/aoc/2023/day_05/: Cargo.toml
websites/aoc/2023/day_05/src/: lib.rs
websites/aoc/2023/day_06/: Cargo.toml
websites/aoc/2023/day_06/src/: lib.rs
websites/aoc/2023/day_07/: Cargo.toml
websites/aoc/2023/day_07/src/: lib.rs
websites/aoc/2023/day_08/: Cargo.toml
websites/aoc/2023/day_09/: Cargo.toml
websites/codeforces/round_0888_div_3/escalator_conversations/: Cargo.toml
websites/codeforces/round_0888_div_3/parity_sort/: Cargo.toml
websites/codeforces/round_0888_div_3/tiles_comeback/: Cargo.toml
websites/cses/introductory-problems/missing-number/: Cargo.toml
websites/cses/introductory-problems/weird-algorithm/: Cargo.toml
websites/cses/introductory_problems/missing_number/: Cargo.toml
websites/cses/introductory_problems/weird_algorithm/: Cargo.toml
websites/cses/sorting_and_searching/apartments/: Cargo.toml
websites/cses/sorting_and_searching/distinct_numbers/: Cargo.toml
(+15 files in other folders)
